
  * The legacy key discovery method PKA is no longer supported.  The
    command --print-pka-records and the PKA related import and export
    options have been removed.

  * A new experimental key database daemon is provided.  To enable it
    put "use-keyboxd" into gpg.conf and gpgsm.conf.  Keys are stored
    in a SQLite database and make key lookup much faster.


  Changes also found in 2.2.27:

  * gpg: Fix regression in 2.2.24 for gnupg_remove function under
    Windows.  [#5230]

  * gpgconf: Fix case with neither local nor global gpg.conf.  [9f37d3e6f3]

  * gpgconf: Fix description of two new options.  [#5221]

  * Build Windows installer without timestamps.  Note that the
    Authenticode signatures still carry a timestamp.

  Release-info: https://dev.gnupg.org/T5234
  See-also: gnupg-announce/2021q1/000452.html

  Changes also found in 2.2.26:

  * gpg: New AKL method "ntds".  [559efd23e9]

  * gpg: Fix --trusted-key with fingerprint arg.  [8a2e5025eb]

  * scd: Fix writing of ECC keys to an OpenPGP card.  [#5163]

  * scd: Make an USB error fix specific to SPR532 readers.  [#5167]

  * dirmngr: With new LDAP keyservers store the new attributes.  Never
    store the useless pgpSignerID.  Fix a long standing bug storing
    some keys on an ldap server.  [0e88c73bc9,e47de85382]

  * dirmngr: Support the new Active Direcory LDAP schema for
    keyservers.  [ac8ece9266]

  * dirmngr: Allow LDAP OpenPGP searches via fingerprint.
    [c75fd75532]

  * dirmngr: Do not block other threads during keyserver LDAP calls.
    [15bfd189c0]

  * Support global configuration files.  [#4788,a028f24136]

  * Fix the iconv fallback handling to UTF-8.  [#5038]

  Release-info: https://dev.gnupg.org/T5153
  See-also: gnupg-announce/2020q4/000451.html

  Changes also found in 2.2.25:

  * scd: Fix regression in 2.2.24 requiring gpg --card-status before
    signing or decrypting.  [#5065]

  * gpgsm: Using Libksba 1.5.0 signatures with a rarely used